main.tf
## Managed By : CloudDrove
# Description : This Script is used to creates Subnet resources on AWS.
## Copyright @ CloudDrove. All Right Reserved.


locals {
  public_count               = var.enabled == true && (var.type == "public" || var.type == "public-private") ? length(var.availability_zones) : 0
  private_nat_gateways_count = var.enabled == true && (var.type == "private" || var.type == "public-private") && var.nat_gateway_enabled == true ? length(var.availability_zones) : 0
  private_count              = var.enabled == true && (var.type == "private" || var.type == "public-private") ? length(var.availability_zones) : 0
  nat_gateway_count          = var.single_nat_gateway ? 1 : local.private_nat_gateways_count

}

#Module      : label
#Description : This terraform module is designed to generate consistent label names and
#              tags for resources. You can use terraform-labels to implement a strict
#              naming convention.
module "private-labels" {
  source  = "clouddrove/labels/aws"
  version = "0.15.0"

  name        = var.name
  repository  = var.repository
  environment = var.environment
  managedby   = var.managedby
  label_order = var.label_order
  attributes  = compact(concat(var.attributes, ["private"]))
  extra_tags = {
    Type = "private"
  }
}

module "public-labels" {
  source  = "clouddrove/labels/aws"
  version = "0.15.0"

  name        = var.name
  repository  = var.repository
  environment = var.environment
  managedby   = var.managedby
  label_order = var.label_order
  attributes  = compact(concat(var.attributes, ["public"]))
  extra_tags = {
    Type = "public"
  }
}

#Module      : PUBLIC SUBNET
#Description : Terraform module to create public, private and public-private subnet with
#              network acl, route table, Elastic IP, nat gateway, flow log.
resource "aws_subnet" "public" {
  count = local.public_count

  vpc_id            = var.vpc_id
  availability_zone = element(var.availability_zones, count.index)

  cidr_block = length(var.ipv4_cidrs) == 0 ? cidrsubnet(
    signum(length(var.cidr_block)) == 1 ? var.cidr_block : var.cidr_block,
    ceil(log(local.public_count * 2, 2)),
    local.public_count + count.index
  ) : var.ipv4_cidrs[count.index]

  ipv6_cidr_block = length(var.ipv6_cidrs) == 0 ? cidrsubnet(
    signum(length(var.ipv6_cidr_block)) == 1 ? var.ipv6_cidr_block : var.ipv6_cidr_block,
    8,
    local.public_count + count.index
  ) : var.ipv6_cidrs[count.index]
  map_public_ip_on_launch         = var.map_public_ip_on_launch
  assign_ipv6_address_on_creation = var.assign_ipv6_address_on_creation

  tags = merge(
    module.public-labels.tags, var.tags,
    {
      "Name" = format("%s%s%s", module.public-labels.id, var.delimiter, element(var.availability_zones, count.index))
      "AZ"   = element(var.availability_zones, count.index)
    }
  )

  lifecycle {
    # Ignore tags added by kubernetes
    ignore_changes = [
      tags,
      tags["kubernetes.io"],
      tags["SubnetType"],
    ]
  }
}

#Module      : NETWORK ACL
#Description : Provides an network ACL resource. You might set up network ACLs with rules
#              similar to your security groups in order to add an additional layer of
#              security to your VPC.
resource "aws_network_acl" "public" {
  count = var.enabled == true && var.enable_acl == true && (var.type == "public" || var.type == "public-private") && signum(length(var.public_network_acl_id)) == 0 ? 1 : 0

  vpc_id     = var.vpc_id
  subnet_ids = aws_subnet.public.*.id


  dynamic "egress" {
    for_each = var.egress == null ? [] : var.egress
    content {
      rule_no    = lookup(egress.value, "rule_no", null )
      action     = lookup(egress.value, "action", null )
      cidr_block = lookup(egress.value, "cidr_block", null )
      from_port  = lookup(egress.value, "from_port", null )
      to_port    = lookup(egress.value, "to_port", null )
      protocol   = lookup(egress.value, "protocol", null )
    }
    }

  dynamic "ingress" {
    for_each = var.ingress == null ? [] : var.ingress
    content {
      rule_no    = ingress.value.rule_no
      action     = ingress.value.action
      cidr_block = lookup(ingress.value.cidr_block, "cidr_block", null )
      from_port  = ingress.value.from_port
      to_port    = ingress.value.to_port
      protocol   = ingress.value.protocol
    }
  }


  tags = merge(
    module.public-labels.tags,
    {
      "name" = format("%s%s%s", module.public-labels.id, var.delimiter, "public-acl" )
    }
  )
  depends_on = [aws_subnet.public]
}

#Module      : ROUTE TABLE
#Description : Provides a resource to create a VPC routing table.
resource "aws_route_table" "public" {
  count = local.public_count

  vpc_id = var.vpc_id

  tags = merge(
    module.public-labels.tags,
    {
      "Name" = format("%s%s%s-rt", module.public-labels.id, var.delimiter, element(var.availability_zones, count.index))
      "AZ"   = element(var.availability_zones, count.index)
    },
    var.tags
  )
}


#Module      : ROUTE
#Description : Provides a resource to create a routing table entry (a route) in a VPC
#              routing table.
resource "aws_route" "public" {
  count = local.public_count

  route_table_id         = element(aws_route_table.public.*.id, count.index)
  gateway_id             = var.igw_id
  destination_cidr_block = "0.0.0.0/0"
  depends_on             = [aws_route_table.public]
}

resource "aws_route" "public_ipv6" {
  count = local.public_count

  route_table_id              = element(aws_route_table.public.*.id, count.index)
  gateway_id                  = var.igw_id
  destination_ipv6_cidr_block = "::/0"
  depends_on                  = [aws_route_table.public]
}

#Module      : ROUTE TABLE ASSOCIATION PRIVATE
#Description : Provides a resource to create an association between a subnet and routing
#              table.
resource "aws_route_table_association" "public" {
  count = local.public_count

  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = element(aws_route_table.public.*.id, count.index)


  depends_on = [
    aws_subnet.public,
    aws_route_table.public,
  ]
}

#Module      : Flow Log
#Description : Provides a VPC/Subnet/ENI Flow Log to capture IP traffic for a specific
#              network interface, subnet, or VPC. Logs are sent to a CloudWatch Log Group
#              or a S3 Bucket.
resource "aws_flow_log" "flow_log" {
  count = var.enabled == true && var.enable_flow_log == true ? 1 : 0

  log_destination      = var.s3_bucket_arn
  log_destination_type = "s3"
  traffic_type         = var.traffic_type
  subnet_id            = element(aws_subnet.public.*.id, count.index)
  tags = merge(
    module.public-labels.tags,
    {
      "Name" = format("%s-flowlog-public", module.public-labels.name)
    }
  )
}

#Module      : PRIVATE SUBNET
#Description : Terraform module to create public, private and public-private subnet with
#              network acl, route table, Elastic IP, nat gateway, flow log.
resource "aws_subnet" "private" {
  count = local.private_count

  vpc_id            = var.vpc_id
  availability_zone = element(var.availability_zones, count.index)

  cidr_block = length(var.ipv4_cidrs) == 0 ? cidrsubnet(
    signum(length(var.cidr_block)) == 1 ? var.cidr_block : var.cidr_block,
    local.public_count == 0 ? ceil(log(local.private_count * 2, 2)) : ceil(log(local.public_count * 2, 2)),
    count.index
  ) : var.ipv4_cidrs[count.index]

  ipv6_cidr_block = length(var.ipv6_cidrs) == 0 ? cidrsubnet(
    signum(length(var.ipv6_cidr_block)) == 1 ? var.ipv6_cidr_block : var.ipv6_cidr_block,
    8,
    count.index
  ) : var.ipv6_cidrs[count.index]

  assign_ipv6_address_on_creation = var.assign_ipv6_address_on_creation

  tags = merge(
    module.private-labels.tags,
    {
      "Name" = format("%s%s%s", module.private-labels.id, var.delimiter, element(var.availability_zones, count.index))
      "AZ"   = element(var.availability_zones, count.index)
    },
    var.tags
  )

  lifecycle {
    # Ignore tags added by kubernetes
    ignore_changes = [
      tags,
      tags["kubernetes.io"],
      tags["SubnetType"],
    ]
  }
}

#Module      : NETWORK ACL
#Description : Provides an network ACL resource. You might set up network ACLs with rules
#              similar to your security groups in order to add an additional layer of
#              security to your VPC.
resource "aws_network_acl" "private" {
  count = var.enabled == true && var.enable_acl == true && (var.type == "private" || var.type == "public-private") && signum(length(var.public_network_acl_id)) == 0 ? 1 : 0

  vpc_id     = var.vpc_id
  subnet_ids = aws_subnet.private.*.id

  dynamic "egress" {
    for_each = var.egress-private == null ? [] : var.egress-private
    content {
      rule_no    = egress.value.rule_no
      action     = egress.value.action
      cidr_block = egress.value.cidr_block
      from_port  = egress.value.from_port
      to_port    = egress.value.to_port
      protocol   = egress.value.protocol
    }
  }

  dynamic "ingress" {
    for_each = var.ingress-private == null ? [] : var.ingress-private
    content {
      rule_no    = ingress.value.rule_no
      action     = ingress.value.action
      cidr_block = ingress.value.cidr_block
      from_port  = ingress.value.from_port
      to_port    = ingress.value.to_port
      protocol   = ingress.value.protocol
    }
  }
    tags = merge(
      module.private-labels.tags,
      {
        "name" = format("%s%s%s", module.public-labels.id, var.delimiter, "private-acl" )
      }
    )

    depends_on = [aws_subnet.private]

}

#Module      : ROUTE TABLE
#Description : Provides a resource to create a VPC routing table.
resource "aws_route_table" "private" {
  count = local.private_count

  vpc_id = var.vpc_id
  tags = merge(
    module.private-labels.tags,
    {
      "Name" = format("%s%s%s-rt", module.private-labels.id, var.delimiter, element(var.availability_zones, count.index))
      "AZ"   = element(var.availability_zones, count.index)
    }
  )
}

#Module      : ROUTE TABLE ASSOCIATION PRIVATE
#Description : Provides a resource to create an association between a subnet and routing
#              table.
resource "aws_route_table_association" "private" {
  count = local.private_count

  subnet_id = element(aws_subnet.private.*.id, count.index)
  # route_table_id = element(aws_route_table.private.*.id, count.index)
  route_table_id = element(
    aws_route_table.private.*.id,
    var.single_nat_gateway ? 0 : count.index,
  )
}

#Module      : ROUTE
#Description : Provides a resource to create a routing table entry (a route) in a VPC
#              routing table.
resource "aws_route" "nat_gateway" {
  count = local.nat_gateway_count > 0 ? local.nat_gateway_count : 0

  route_table_id         = element(aws_route_table.private.*.id, count.index)
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = element(aws_nat_gateway.private.*.id, count.index)
  depends_on             = [aws_route_table.private]
}

#Module      : EIP
#Description : Provides an Elastic IP resource..
resource "aws_eip" "private" {
  count = local.nat_gateway_count

  vpc = true
  tags = merge(
    module.private-labels.tags,
    {
      "Name" = format("%s%s%s-eip", module.private-labels.id, var.delimiter, element(var.availability_zones, count.index))
    }
  )
  lifecycle {
    create_before_destroy = true
  }
}

#Module      : NAT GATEWAY
#Description : Provides a resource to create a VPC NAT Gateway.
resource "aws_nat_gateway" "private" {
  count = local.nat_gateway_count

  allocation_id = element(aws_eip.private.*.id, count.index)
  subnet_id     = length(aws_subnet.public) > 0 ? element(aws_subnet.public.*.id, count.index) : element(var.public_subnet_ids, count.index)
  tags = merge(
    module.private-labels.tags,
    {
      "Name" = format("%s%s%s-ng", module.private-labels.id, var.delimiter, element(var.availability_zones, count.index))
    }
  )
}

#Module      : Flow Log
#Description : Provides a VPC/Subnet/ENI Flow Log to capture IP traffic for a specific
#              network interface, subnet, or VPC. Logs are sent to a CloudWatch Log Group
#              or a S3 Bucket.
resource "aws_flow_log" "private_subnet_flow_log" {
  count                = var.enabled == true && var.enable_flow_log == true ? 1 : 0
  log_destination      = var.s3_bucket_arn
  log_destination_type = "s3"
  traffic_type         = var.traffic_type
  subnet_id            = element(aws_subnet.private.*.id, count.index)
  tags = merge(
    module.private-labels.tags,
    {
      "Name" = format("%s-flowlog-private", module.private-labels.name)
    }
  )
}
